Fixed pmd and checkstyle issues